delete sample html

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
     <h1 style="font-family: 'Chewy', cursive;text-align:center;color: #e57373;font-size: 50px">About Me</h1>
     <img src="images/me4.jpg" width="15%"style="display:block; margin:auto;" >
-   <p style="font-family: 'Chewy', cursive; color:#e57373;font-size:20px; text-align:center;"> Mein Name ist Peiyu. 
+   <p style="font-family: 'Chewy', cursive; color:#e57373;font-size:20px; text-align:center;"> Mein Name ist Peiyu. Moin Moin
 <img src="images/f7.jpg" width="5%"style="display:block; margin:auto;">
     <style>
 a {
