--- a/contact/index.html
+++ b/contact/index.html
@@ -205,8 +205,7 @@ a {
 }
 </style>
   <p style="text-align:center;">
-<a href="../index.html" style=" color: #e3f2fd; 
-font-family: 'Shadows Into Light', cursive; font-size: 80px; font-weight: normal; line-height: 48px; margin: auto; ">Back</a>
+<a href="../index.html" style="font-family: 'Chewy', cursive; color:#bdbdbd;font-size:30px; text-align:center; font-weight: normal; line-height: 48px; margin: auto;">Back</a>
 </p>
     <link href="http://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
 
