--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ a {
 }
 </style>
 <!--hide a underline css-->
-<a href="index.html" style="font-family: 'Open Sans', sans-serif;">Work</a>
-<a href="https://github.com/yupeiyu" target="blank"style="font-family: 'Open Sans', sans-serif;">Github</a>
-<a href="http://funmandarinletsrock.blogspot.tw/" target="blank" style="font-family: 'Open Sans', sans-serif;">Blog</a>
-<a href="about.html" style="font-family: 'Open Sans', sans-serif;" >About</a>
-<a href="contact/index.html" style="font-family: 'Open Sans', sans-serif;">Contact</a>
+<a href="index.html" style="font-family: 'Shadows Into Light', cursive;">Work</a>
+<a href="https://github.com/yupeiyu" target="blank" style="font-family: 'Shadows Into Light', cursive;">Github</a>
+<a href="http://funmandarinletsrock.blogspot.tw/" target="blank" style="font-family: 'Shadows Into Light', cursive;">Blog</a>
+<a href="about.html" style="font-family: 'Shadows Into Light', cursive;">About</a>
+<a href="contact/index.html" style="font-family: 'Shadows Into Light', cursive;">Contact</a>
 </p>
 <iframe src="bling/index.html"frameborder="0"scrolling="no" width="100%" height="700" ></iframe>
 
