--- a/about.html
+++ b/about.html
@@ -3,19 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<title>About Me</title>
+	<link rel="stylesheet" href="main.css">
 </head>
 <body >
 
 <link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
-    <h1 style="font-family: 'Chewy', cursive;text-align:center;color: #e57373;font-size: 50px">About Me</h1>
+    <h1 style="font-family: 'Chewy', cursive;text-align:center;color: #607d8b;font-size: 50px">About Me</h1>
     <img src="images/me4.jpg" width="15%"style="display:block; margin:auto;" >
-   <p style="font-family: 'Chewy', cursive; color:#e57373;font-size:20px; text-align:center;"> Mein Name ist Peiyu. Moin Moin
+   <p style="font-family: 'Chewy', cursive; color:#757575 ;font-size:20px; text-align:center;"> 
+   Peiyu lives in Taipei where she studies pharmacy, German language and Web design. <br>
+   She was born and raised in Hualien, but she loves to travel to different places,<br>
+    and challenges herself. <br>
+   Her dream is to create beautiful and meaningful works to make people happy and inspired.<br>
+    She also teach Mandarin for International office in Fujen University.
+
+
 <img src="images/f7.jpg" width="5%"style="display:block; margin:auto;">
     <style>
 a {
     text-decoration:none;
 </style>
-  <p style="text-align:center;">  <a href="index.html" style="font-family: 'Chewy', cursive; color:#e57373;font-size:50px">Back</a></p>
+  <p style="text-align:center;">  <a href="index.html" style="font-family: 'Chewy', cursive; font-size:50px">Back</a></p>
     
 	
 </body>
