--- a/contact/index.html
+++ b/contact/index.html
@@ -16,7 +16,7 @@
 body{
   font-family: 'Raleway', sans-serif;
   color:#fff;
-  background:#105268;
+  background:#ffecb3;
   font-size:1.2rem;
 }
 
@@ -199,6 +199,34 @@ input:invalid{
   </head>
 
   <body>
+<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+<p style="text-align:center; color: #424242;font-family: 'Poiret One', cursive; font-size: 30px">
+Peiyu is available for freelance projects.<br>
+ Use the form below to inquire about rates and availability,<br>
+  or just to say hi!</p>
+<style >
+a {
+    text-decoration:none;
+    text-align:center;
+}
+a:link {
+  color: #f06292; font-size: 30px; font-weight: normal; line-height: 48px; margin: auto; 
+　//設定還沒瀏覽過的連結樣式
+}
+a:visited {
+  color:#bdbdbd ; font-size: 30px; font-weight: normal; line-height: 48px; margin: auto; 
+　//設定已經瀏覽過的連結樣式
+}
+a:hover {
+  color:#f06292 ;  font-size: 50px; font-weight: normal; line-height: 48px; margin: auto; 
+　//設定滑鼠移到連結上的樣式
+}
+a:active {
+  color:#bdbdbd ; font-weight: normal; line-height: 48px; margin: auto; 
+　//設定正在被點選的連結樣式
+}
+</style>
+<p style="text-align:center;font-family: 'Poiret One'"><a href="../index.html" >Back to Moin Moin</a></p>
 
     <link href="http://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
 
@@ -228,18 +256,6 @@ input:invalid{
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
         <script src="js/index.js"></script>
-<div>
-<style>
-a {
-    text-decoration:none;
 
-}
-</style>
-<link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
-  <p  style="text-align:center;font-size: 50px;vertical-align:bottom;">
-<a href="../index.html"style="font-family: 'Chewy', cursive;color: #607d8b; ">Back</a>
-</p>    
-    
-    </div>
   </body>
 </html>
