--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ a {
 }
 </style>
 <!--hide a underline css-->
-<a href="index.html" style="font-family: 'Shadows Into Light', cursive;">Work</a>
-<a href="http://funmandarinletsrock.blogspot.tw/" target="blank" style="font-family: 'Shadows Into Light', cursive;">Blog</a>
+<a href="work.html" style="font-family: 'Shadows Into Light', cursive;">Work</a>
+<a href="http://epochmy.blogspot.tw/" target="blank" style="font-family: 'Shadows Into Light', cursive;">Blog</a>
 <a href="about.html" style="font-family: 'Shadows Into Light', cursive;">About</a>
 <a href="contact/index.html" style="font-family: 'Shadows Into Light', cursive;">Contact</a>
 </p>
