--- a/contact/index.html
+++ b/contact/index.html
@@ -199,8 +199,8 @@ input:invalid{
   </head>
 
   <body>
-<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-<p style="text-align:center; color: #424242;font-family: 'Poiret One', cursive; font-size: 30px">
+<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+<p style="text-align:center; color: #424242;font-family: 'Amatic SC', cursive; font-size: 50px">
 Peiyu is available for freelance projects.<br>
  Use the form below to inquire about rates and availability,<br>
   or just to say hi!</p>
@@ -210,15 +210,15 @@ a {
     text-align:center;
 }
 a:link {
-  color: #f06292; font-size: 30px; font-weight: normal; line-height: 48px; margin: auto; 
+  color: #f06292; font-size: 50px; font-weight: normal; line-height: 48px; margin: auto; 
 　//設定還沒瀏覽過的連結樣式
 }
 a:visited {
-  color:#bdbdbd ; font-size: 30px; font-weight: normal; line-height: 48px; margin: auto; 
+  color:#bdbdbd ; font-size: 50px; font-weight: normal; line-height: 48px; margin: auto; 
 　//設定已經瀏覽過的連結樣式
 }
 a:hover {
-  color:#f06292 ;  font-size: 50px; font-weight: normal; line-height: 48px; margin: auto; 
+  color:#f06292 ;  font-size:50px; font-weight: normal; line-height: 48px; margin: auto; 
 　//設定滑鼠移到連結上的樣式
 }
 a:active {
@@ -226,7 +226,7 @@ a:active {
 　//設定正在被點選的連結樣式
 }
 </style>
-<p style="text-align:center;font-family: 'Poiret One'"><a href="../index.html" >Back to Moin Moin</a></p>
+<p style="text-align:center;font-family:  'Amatic SC', cursive"><a href="../index.html" >Back to Moin Moin</a></p>
 
     <link href="http://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
 
