index font better

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
 <div>
 <p class="place">
 <style>
@@ -16,10 +16,10 @@ a {
 }
 </style>
 <!--hide a underline css-->
-<a href="work.html" style="font-family: 'Shadows Into Light', cursive;">Work</a>
-<a href="http://epochmy.blogspot.tw/" target="blank" style="font-family: 'Shadows Into Light', cursive;">Blog</a>
-<a href="about.html" style="font-family: 'Shadows Into Light', cursive;">About</a>
-<a href="contact/index.html" style="font-family: 'Shadows Into Light', cursive;">Contact</a>
+<a href="work.html" style="font-family: 'Amatic SC', cursive;">Work</a>
+<a href="http://epochmy.blogspot.tw/" target="blank" style="font-family:'Amatic SC', cursive;">Blog</a>
+<a href="about.html" style="font-family: 'Amatic SC', cursive;">About</a>
+<a href="contact/index.html" style="font-family: 'Amatic SC', cursive;">Contact</a>
 </p>
 <iframe src="bling/index.html"frameborder="0"scrolling="no" width="100%" height="700" ></iframe>
 
