--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta charset="UTF-8">
 	<title>Peiyu's Wonderland</title>
 	<link rel="stylesheet" href="main.css">
+	<meta property="og:title" content="Moin Moin" />
+<meta property="og:type" content="This is what i do" />
+<meta property="og:url" content="http://yupeiyu.github.io/yupeiyu/index.html" />
+<meta property="og:image" content="images/autum_berlin.jpg" />
 </head>
 <body>
 	<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
