--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta property="og:url" content="http://yupeiyu.github.io/yupeiyu/index.html" />
 <meta property="og:image" content="images/autum_berlin.jpg" />
 <meta property="og:description" 
-  content="哭哭 我的第一個碗站 只是半成品 不過這個碗可以拿來裝飯沒問題了" />
+  content="ku ku wo de di yi ge wang zhan" />
 </head>
 <body>
 	<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
