--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Peiyu's Wonderland</title>
 	<link rel="stylesheet" href="main.css">
-	<meta property="og:title" content="Moin Moin ku ku wo de di yi ge wang zhan" />
-<meta property="og:type" content="This is what i do" />
+	<meta property="og:title" content="Moin Moin 哭哭 我的第一個碗站" />
 <meta property="og:url" content="http://yupeiyu.github.io/yupeiyu/index.html" />
 <meta property="og:image" content="images/autum_berlin.jpg" />
 
