--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<meta charset="UTF-8">
 	<title>Peiyu's Wonderland</title>
 	<link rel="stylesheet" href="main.css">
-	<meta property="og:title" content="Moin Moin 哭哭 我的第一個碗站" />
+	<meta property="og:title" content="Moin Moin " />
 <meta property="og:url" content="http://yupeiyu.github.io/yupeiyu/index.html" />
 <meta property="og:image" content="images/autum_berlin.jpg" />
-
+<meta property="og:description" 
+  content="哭哭 我的第一個碗站" />
 </head>
 <body>
 	<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
