--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="http://yupeiyu.github.io/yupeiyu/index.html" />
 <meta property="og:image" content="images/autum_berlin.jpg" />
 <meta property="og:description" 
-  content="wo ku le wo de di yi ge wang zhan" />
+  content="wo ku le wo de di yi ge wang zhan 哭哭我的第一個網站" />
 </head>
 <body>
 	<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
