--- a/about.html
+++ b/about.html
@@ -3,14 +3,32 @@
 <head>
 	<meta charset="UTF-8">
 	<title>About Me</title>
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="about.css">
 </head>
 <body >
-<img src="images/me4.jpg" width="15%"style="display:block; margin:auto;" >
-<link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet' type='text/css'>
-    <h1 style="font-family: 'Chewy', cursive;text-align:center;color: #607d8b;font-size: 50px">About Peiyu</h1>
+  
+<div>
+<p class="place">
+<style>
+a {
+    text-decoration:none;
+}
+</style>
+<!--hide a underline css-->
+<a href="work.html" style="font-family: 'Indie Flower', cursive;">Work</a>
+<a href="http://epochmy.blogspot.tw/" target="blank" style="font-family: 'Indie Flower', cursive;">Blog</a>
+<a href="about.html" style="font-family: 'Indie Flower', cursive;">About</a>
+<a href="contact/index.html" style="font-family: 'Indie Flower', cursive;">Contact</a>
+</p>
+
+
+
+
+<img src="images/me4.png" width="15%"style="display:block; margin:auto;" >
+<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+    <h1 style="font-family: 'Quicksand', sans-serif;text-align:center;color: #607d8b;font-size: 40px">About Peiyu</h1>
     
-   <p style="font-family: 'Chewy', cursive; color:#757575 ;font-size:20px; text-align:center;"> 
+   <p style="font-family: 'Quicksand', sans-serif;color:#757575 ;font-size:20px; text-align:center;"> 
    Peiyu lives in Taipei where she studies pharmacy, German language and Programming. <br><br>
    She was born and raised in Hualien, but she loves to travel to different places,<br><br>
     and challenges herself. <br><br>
@@ -18,13 +36,7 @@
     She is also a Mandarin Tutor.<br><br><br>
 
 
-<img src="images/f7.jpg" width="3%"style="display:block; margin:auto;">
-    <style>
-a {
-    text-decoration:none;
-</style>
-  <p style="text-align:center;">  <a href="index.html" style="font-family: 'Chewy', cursive; font-size:50px">Back to Moin Moin</a></p>
-    
+  
 	
 </body>
 </html>
