--- a/work.html
+++ b/work.html
@@ -7,6 +7,20 @@
 
 </head>
 <body>
+	<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+<div>
+<p class="place">
+<style>
+a {
+    text-decoration:none;
+}
+</style>
+<!--hide a underline css-->
+<a href="work.html" style="font-family: 'Amatic SC', cursive;">Work</a>
+<a href="http://epochmy.blogspot.tw/" target="blank" style="font-family:'Amatic SC', cursive;">Blog</a>
+<a href="about.html" style="font-family: 'Amatic SC', cursive;">About</a>
+<a href="contact/index.html" style="font-family: 'Amatic SC', cursive;">Contact</a>
+</p>
 <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
 <style>
 a {
@@ -17,18 +31,15 @@ a {
 
 
 <!--次選單 --> 
-<div >
-<p class="place">
-<a href="flatdesign.html" style="font-family: 'Amatic SC', cursive;">FlatDesign</a>
-<a href="uiux.html" style="font-family: 'Amatic SC', cursive;">UI/UX</a>
+<div style="line-height: 500px">
+<p class="place" style="float:right;">
+<a href="dribble" style="font-family: 'Amatic SC', cursive;">Design</a></p>
+
 <a href="https://github.com/yupeiyu" style="font-family: 'Amatic SC', cursive;" target="_blank">{code}</a>
-<a href="webdesign.html" style="font-family: 'Amatic SC', cursive;">WebDesign</a>
-</p>
-</div> 
+
+</div>
  
-<p style="text-align:center;">
-<a href="index.html" style="font-family: 'Amatic SC', cursive;" >Back to Moin Moin</a>
-</p>
+
 
 </body>
 </html>
