--- a/about.html
+++ b/about.html
@@ -15,24 +15,27 @@ a {
 }
 </style>
 <!--hide a underline css-->
-<a href="work.html" style="font-family: 'Indie Flower', cursive;">Work</a>
-<a href="http://epochmy.blogspot.tw/" target="blank" style="font-family: 'Indie Flower', cursive;">Blog</a>
-<a href="about.html" style="font-family: 'Indie Flower', cursive;">About</a>
-<a href="contact/index.html" style="font-family: 'Indie Flower', cursive;">Contact</a>
+<a href="work.html" style="font-family: 'Amatic SC', cursive;">Work</a>
+<a href="http://epochmy.blogspot.tw/" target="blank" style="font-family: 'Amatic SC', cursive;">Blog</a>
+<a href="about.html" style="font-family: 'Amatic SC', cursive;">About</a>
+<a href="contact/index.html" style="font-family:'Amatic SC', cursive;">Contact</a>
 </p>
 
 
 
 
-<img src="images/me4.png" width="15%"style="display:block; margin:auto;" >
-<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-    <h1 style="font-family: 'Quicksand', sans-serif;text-align:center;color: #607d8b;font-size: 40px">About Peiyu</h1>
+<img src="images/me4.png" width="30%"style="display:block; margin:auto;" >
+<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+    <h1 style="font-family: 'Amatic SC', cursive;text-align:center;color: #607d8b;font-size: 60px">About Peiyu</h1>
     
-   <p style="font-family: 'Quicksand', sans-serif;color:#757575 ;font-size:20px; text-align:center;"> 
-   Peiyu lives in Taipei where she studies pharmacy, German language and Programming. <br><br>
-   She was born and raised in Hualien, but she loves to travel to different places,<br><br>
+   <p style="font-family: 'Amatic SC', cursive;color:#757575 ;font-size:40px; text-align:center;"> 
+   Peiyu lives in Taipei where she studies pharmacy, <br>
+   German language and Programming. <br><br>
+   She was born and raised in Hualien, <br>
+   but she loves to travel to different places,<br><br>
     and challenges herself. <br><br>
-   Her dream is to create beautiful and meaningful works to make people happy and inspired.<br><br>
+   Her dream is to create beautiful and meaningful works <br>
+   to make people happy and inspired.<br><br>
     She is also a Mandarin Tutor.<br><br><br>
 
 
