--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@ a {
 <p class="place" style="float:right;">
 <a href="dribble" style="font-family: 'Amatic SC', cursive;">Design</a></p>
 
-<a href="https://github.com/yupeiyu" style="font-family: 'Amatic SC', cursive;" target="_blank">{code}</a>
+<a href="https://github.com/yupeiyu" style="font-family: 'Amatic SC', cursive;" target="_blank">{CODE}</a>
 
 </div>
  
