--- a/hualiensea.html
+++ b/hualiensea.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta property="og:title" content="Moin Moin " />
 <meta property="og:url" content="http://yupeiyu.github.io/yupeiyu/hualiensea.html" />
-<meta property="og:image" content="sis.jpg" />
+<meta property="og:image" content="sis.jpeg" />
 <meta property="og:description" 
   content="七星潭一直都是一個湖，是誰跟你說他是海" />
 </head>
