work, webUI, App UI

--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>About Me</title>
 	<link rel="stylesheet" href="about.css">
+  <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:100' rel='stylesheet' type='text/css'>
 </head>
 <body >
   
@@ -18,7 +20,7 @@ a {
 <a href="work.html" style="font-family: 'Amatic SC', cursive;">Work</a>
 <a href="http://epochmy.blogspot.tw/" target="blank" style="font-family: 'Amatic SC', cursive;">Blog</a>
 <a href="about.html" style="font-family: 'Amatic SC', cursive;">About</a>
-<a href="contact/index.html" style="font-family:'Amatic SC', cursive;">Contact</a>
+
 </p>
 
 
@@ -32,26 +34,27 @@ a {
     text-decoration:none;
 }
 </style>
-<a href="hualiensea.html" style="font-family:'Amatic SC', cursive;">HomeCity</a>
-<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+
 </p>
-
-<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
-
     <h1 style="font-family: 'Amatic SC', cursive;text-align:center;color: #607d8b;font-size: 60px">About Peiyu</h1>
-    
-   <p style="font-family: 'Amatic SC', cursive;color:#757575 ;font-size:40px; text-align:center;"> 
-   Peiyu lives in Taipei where she studies pharmacy, <br>
+    <div id="outer" style="width:100%;background-color: #fffacd;"  >  
+       <div id="inner">
+
+   <p style="font-family: 'Josefin Slab', serif; color:#6b8e23;font-size:30px;  "> 
+   <br><br>
+   Peiyu lives in Taipei where she studies pharmacy, <br><br>
    German language and Programming. <br><br>
-   She was born and raised in Hualien, <br>
+   She was born and raised in Hualien, <br><br>
    but she loves to travel to different places,<br><br>
     and challenges herself. <br><br>
-   Her dream is to create beautiful and meaningful works <br>
+   Her dream is to create beautiful and meaningful works <br><br>
    to make people happy and inspired.<br><br>
-    She is also a Mandarin Tutor.<br><br><br>
+    She is also a Mandarin Tutor.<br><br>
+</p>
+</div>
 
-
-  
+  </div>
+  </div>
 	
 </body>
 </html>
