--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="http://yupeiyu.github.io/yupeiyu/index.html" />
 <meta property="og:image" content="images/autum_berlin.jpg" />
 <meta property="og:description" 
-  content="wo ku le wo de di yi ge wang zhan 哭哭我的第一個網站" />
+  content="Om Yu Pei Yu" />
 </head>
 <body>
 	<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
@@ -24,7 +24,7 @@ a {
 <a href="work.html" style="font-family: 'Amatic SC', cursive;">Work</a>
 <a href="http://epochmy.blogspot.tw/" target="blank" style="font-family:'Amatic SC', cursive;">Blog</a>
 <a href="about.html" style="font-family: 'Amatic SC', cursive;">About</a>
-<a href="contact/index.html" style="font-family: 'Amatic SC', cursive;">Contact</a>
+
 </p>
 <iframe src="bling/index.html"frameborder="0"scrolling="no" width="100%" height="700" ></iframe>
 
