--- a/work.html
+++ b/work.html
@@ -7,37 +7,35 @@
 
 </head>
 <body>
-	<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
-<div>
-<p class="place">
-<style>
-a {
-    text-decoration:none;
-}
-</style>
-<!--hide a underline css-->
+<div id="Header">
+	<p class="place">
+	<style>a {text-decoration:none;}</style>
+<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
 <a href="work.html" style="font-family: 'Amatic SC', cursive;">Work</a>
 <a href="http://epochmy.blogspot.tw/" target="blank" style="font-family:'Amatic SC', cursive;">Blog</a>
 <a href="about.html" style="font-family: 'Amatic SC', cursive;">About</a>
-<a href="contact/index.html" style="font-family: 'Amatic SC', cursive;">Contact</a>
+
 </p>
-<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
-<style>
-a {
-    text-decoration:none;
-}
-</style>
-<div id="WRAPPER"> <!--最外層包裝 -->
+</div>
+<div id="outer" style="width:100%" class="work" >  
+  <div id="inner">
+	
+<link href='https://fonts.googleapis.com/css?family=Josefin+Slab:400,700italic' rel='stylesheet' type='text/css'>
 
-
-<!--次選單 --> 
-<div style="line-height: 500px">
-<p class="place" style="float:right;">
-<a href="dribble" style="font-family: 'Amatic SC', cursive;">Design</a></p>
-
-<a href="https://github.com/yupeiyu" style="font-family: 'Amatic SC', cursive;" target="_blank">{CODE}</a>
+			<ul>
+			<li style="list-style-image: url('images/githubicon.png')"><a href="https://github.com/yupeiyu" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;" target="_blank">Github</a></li>
+			<li style="list-style-image: url('images/clothesicon.png')"><a href="clothesWebUI.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">WebDesign-SignIn</a></li>
+			<li style="list-style-image: url('images/mapicon.png')"><a href="hualienapp/TEST.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">MapAppDesign(jQuery-mobile)</a></li>
+			<li style="list-style-image: url('images/Mountainicon.png')"><a href="flatdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">FlatDesign</a></li>
+			<li style="list-style-image: url('images/motionicon.png')"><a href="motion.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">MotionGraphic</a></li>
+			</ul>
 
 </div>
+</div>
+
+<div id="Footer"></div>
+
+
  
 
 
