--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@
 			<li style="list-style-image: url('images/githubicon.png')"><a href="https://github.com/yupeiyu" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;" target="_blank">Github</a></li>
 			<li style="list-style-image: url('images/clothesicon.png')"><a href="clothesWebUI.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">WebDesign-SignIn</a></li>
 			<li style="list-style-image: url('images/mapicon.png')"><a href="hualienapp/TEST.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">MapAppDesign(jQuery-mobile)</a></li>
-			<li style="list-style-image: url('images/Mountainicon.png')"><a href="flatdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">FlatDesign</a></li>
+			<li style="list-style-image: url('images/Mountainicon.png')"><a href="flatdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">FlatDesign</a></li>
 			<li style="list-style-image: url('images/motionicon.png')"><a href="motion.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">MotionGraphic</a></li>
 			</ul>
 
