--- a/2017rubyconf.html
+++ b/2017rubyconf.html
@@ -22,15 +22,17 @@ body{
 
 <div id="main" >
 			<h2>
+				<img src="images/rubyicon.png">
 					Taipei Ruby Conf 2017
 			</h2>
 			<p>
 				Welcome to Taiwan Taipei <br>
+				<img src="images/taiwanicon.png" width="50px">
 			</p>
 			<p>
 
-				<small>Web designed by Peiyu</small>
-				<img src="images/rubyicon.png">
+				<small>Video from <a href="https://www.youtube.com/channel/UC2a_yLcLSw2qSu7hr38EoPw"> 陳志通</a></small>
+				
 			</p>
 		</div>
 <div class="text">
