--- a/flatdesign.html
+++ b/flatdesign.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>FlatDesign</title>
 	<link rel="stylesheet" href="work.css">
+	<link href='https://fonts.googleapis.com/css?family=Josefin+Slab:400,700italic' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
 	<div id="Header">
@@ -19,19 +21,18 @@
 <div id="outer" style="width:100%" class="work" >  
   <div id="inner">
 	
-<link href='https://fonts.googleapis.com/css?family=Josefin+Slab:400,700italic' rel='stylesheet' type='text/css'>
 
 			<ul>
-			<li style="list-style-type:none;"><img src="images/minion.png" width="40%" ></li>
-			<li style="list-style-image: url('images/Mountainicon.png');">Minion and Ruby</li>
-			<li style="list-style-type:none;"><iframe width="560" height="315" src="https://www.youtube.com/embed/03c_TaTNK3E" frameborder="0" allowfullscreen></iframe></li>
-			<li style="list-style-image: url('images/Mountainicon.png');">Minion</li>
-			<li style="list-style-type:none;"><img src="images/railssee.gif" width="40%" ></li>
-			<li style="list-style-image: url('images/Mountainicon.png');">RailMonster see Ruby</li>
-			<li style="list-style-type:none;"><img src="images/summer-wallpaper.png" width="40%" ></li>
-			<li style="list-style-image: url('images/Mountainicon.png');">Mountain and Lake</li>
-			<li style="list-style-type:none;"><iframe width="560" height="315" src="https://www.youtube.com/embed/WXmVG9wFRzo" frameborder="0" allowfullscreen></iframe></li>
-			<li style="list-style-image: url('images/Mountainicon.png');">Personal Logo Film</li>
+			<li style="list-style-type:none;"><img src="images/minion.png" width="40%" ></li><br>
+			<li style="list-style-image: url('images/Mountainicon.png');font-family:'Josefin Slab', serif; font-size: 20px; ">Minion and Ruby-Adobe Ai</li><br>
+			<li style="list-style-type:none;"><iframe width="560" height="315" src="https://www.youtube.com/embed/03c_TaTNK3E" frameborder="0" allowfullscreen></iframe></li><br>
+			<li style="list-style-image: url('images/Mountainicon.png');font-family:'Josefin Slab', serif;font-size: 20px;">Minion-Adobe Ai,Ae</li><br>
+			<li style="list-style-type:none;"><img src="images/railssee.gif" width="40%" ></li><br>
+			<li style="list-style-image: url('images/Mountainicon.png');font-family:'Josefin Slab', serif;font-size: 20px;">RailMonster see Ruby-Adobe Ai,Ps</li><br>
+			<li style="list-style-type:none;"><img src="images/summer-wallpaper.png" width="40%" ></li><br>
+			<li style="list-style-image: url('images/Mountainicon.png');font-family:'Josefin Slab', serif;font-size: 20px;">Mountain and Lake-Adobe Ai,Ps</li><br>
+			<li style="list-style-type:none;"><iframe width="560" height="315" src="https://www.youtube.com/embed/WXmVG9wFRzo" frameborder="0" allowfullscreen></iframe></li><br>
+			<li style="list-style-image: url('images/Mountainicon.png');font-family:'Josefin Slab', serif;font-size: 20px;">Personal Logo Film-Adobe Ps,Ae</li>
 			<li style="list-style-type:none;"></li>
 			</ul>
 
