--- a/work.html
+++ b/work.html
@@ -23,13 +23,13 @@
 <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:400,700italic' rel='stylesheet' type='text/css'>
 
 			<ul>
-			<li style="list-style-image: url('images/githubicon.png')"><a href="https://github.com/yupeiyu" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;" target="_blank">Github</a></li>
-			<li style="list-style-image: url('images/Mountainicon.png')"><a href="flatdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">FlatDesign</a></li>
-			<li style="list-style-image: url('images/rubyicon.png')"><a href="2017rubyconf.html" target="_blank" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">WebDesign 2017 Ruby Conf</a></li>
-			<li style="list-style-image: url('images/clothesicon.png')"><a href="clothesWebUI.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">WebDesign-SignIn</a></li>
-			<li style="list-style-image: url('images/mapicon.png')"><a href="hualienapp/TEST.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">MapAppDesign(jQuery-mobile)</a></li>
-			<li style="list-style-image: url('images/motionicon.png')"><a href="motion.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">MotionGraphic</a></li>
-			</ul>
+			<li style="list-style-image: url('images/githubicon.png')"><a href="https://github.com/yupeiyu" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;" target="_blank">Github</a></li><br>
+			<li style="list-style-image: url('images/Mountainicon.png')"><a href="flatdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">FlatDesign</a></li><br>
+			<li style="list-style-image: url('images/rubyicon.png')"><a href="2017rubyconf.html" target="_blank" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">Front end<br>fullscreen background<br>2017 Ruby Conf</a></li><br>
+			<li style="list-style-image: url('images/clothesicon.png')"><a href="clothesWebUI.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">WebUI-SignIn</a></li><br>
+			<li style="list-style-image: url('images/mapicon.png')"><a href="hualienapp/TEST.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">jQueryMobile-MapApp</a></li><br>
+			<!--<li style="list-style-image: url('images/motionicon.png')"><a href="motion.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">MotionGraphic</a></li>
+			</ul>-->
 
 </div>
 </div>
