--- a/work.html
+++ b/work.html
@@ -25,6 +25,7 @@
 			<ul>
 			<li style="list-style-image: url('images/githubicon.png')"><a href="https://github.com/yupeiyu" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;" target="_blank">Github</a></li><br>
 			<li style="list-style-image: url('images/Mountainicon.png')"><a href="flatdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">FlatDesign</a></li><br>
+			<li style="list-style-image: url('images/designicon.png')"><a href="visualdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">VisualDesign</a></li><br>
 			<li style="list-style-image: url('images/rubyicon.png')"><a href="2017rubyconf.html" target="_blank" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">Front end<br>fullscreen background<br>2017 Ruby Conf</a></li><br>
 			<li style="list-style-image: url('images/clothesicon.png')"><a href="clothesWebUI.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">WebUI-SignIn</a></li><br>
 			<li style="list-style-image: url('images/mapicon.png')"><a href="hualienapp/TEST.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">jQueryMobile-MapApp</a></li><br>
