--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 	<title>About Me</title>
 	<link rel="stylesheet" href="about.css">
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:100' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:600italic' rel='stylesheet' type='text/css'>
 </head>
 <body >
   
@@ -40,12 +40,12 @@ a {
     <div id="outer" style="width:100%;background-color: #fffacd;"  >  
        <div id="inner">
 
-   <p style="font-family: 'Josefin Slab', serif; color:#6b8e23;font-size:30px;  "> 
+   <p style="font-family: 'Josefin Slab', serif; color:#1e2917;font-size:30px;  "> 
    <br><br>
-   Peiyu lives in Taipei where she studies pharmacy, <br><br>
-   German language and Programming. <br><br>
-   She was born and raised in Hualien, <br><br>
-   but she loves to travel to different places,<br><br>
+   Peiyu lives in Taipei where she studies pharmacy <img src="images/pharmicon.png"> <br><br>
+   German language <img src="images/deicon.png"> and Programming<img src="images/codeicon.png"> <br><br>
+   She was born and raised in Hualien<img src="images/homeicon.png"> <br><br>
+   but she loves to travel to different places<img src="images/worldmapicon.png"> <br><br>
     and challenges herself. <br><br>
    Her dream is to create beautiful and meaningful works <br><br>
    to make people happy and inspired.<br><br>
