--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@ a {
     and challenges herself. <br><br>
    Her dream is to create beautiful and meaningful works <br><br>
    to make people happy and inspired.<br><br>
-    She is also a Mandarin Tutor.<br><br>
+    <img src="images/taiwanicon.png"> She is also a Mandarin Tutor<img src="images/mandarinicon.png"><br><br>
 </p>
 </div>
 
