--- a/work.html
+++ b/work.html
@@ -23,7 +23,8 @@
 <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:400,700italic' rel='stylesheet' type='text/css'>
 
 			<ul>
-			<li style="list-style-image: url('images/githubicon.png')"><a href="https://github.com/yupeiyu" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;" target="_blank">Github</a></li><br>
+			<li style="list-style-image: url('images/githubicon.png')"><a href="https://github.com/yupeiyu/railswebapppractice-reddit" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;" target="_blank">The RailsApp 'Reddit' parctice(Github)</a><br><img src="images/reddit1.png" width="33%"><br><img src="images/reddit2.png" width="33%"><br><img src="images/reddit3.png" width="33%"></li>
+			
 			<li style="list-style-image: url('images/Mountainicon.png')"><a href="flatdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">FlatDesign</a></li><br>
 			<li style="list-style-image: url('images/designicon.png')"><a href="visualdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">VisualDesign</a></li><br>
 			<li style="list-style-image: url('images/rubyicon.png')"><a href="2017rubyconf.html" target="_blank" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">Front end<br>fullscreen background<br>2017 Ruby Conf</a></li><br>
