--- a/work.html
+++ b/work.html
@@ -25,11 +25,11 @@
 			<ul>
 			<li style="list-style-image: url('images/githubicon.png')"><a href="https://github.com/yupeiyu/railswebapppractice-reddit" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;" target="_blank">The RailsApp 'Reddit' parctice(Github)</a><br><img src="images/reddit1.png" width="33%"><br><img src="images/reddit2.png" width="33%"><br><img src="images/reddit3.png" width="33%"></li>
 			
-			<li style="list-style-image: url('images/Mountainicon.png')"><a href="flatdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">FlatDesign</a></li><br>
-			<li style="list-style-image: url('images/designicon.png')"><a href="visualdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">VisualDesign</a></li><br>
-			<li style="list-style-image: url('images/rubyicon.png')"><a href="2017rubyconf.html" target="_blank" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">Front end<br>fullscreen background<br>2017 Ruby Conf</a></li><br>
-			<li style="list-style-image: url('images/clothesicon.png')"><a href="clothesWebUI.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">WebUI-SignIn</a></li><br>
-			<li style="list-style-image: url('images/mapicon.png')"><a href="hualienapp/TEST.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">jQueryMobile-MapApp</a></li><br>
+			<li style="list-style-image: url('images/Mountainicon.png')"><a href="flatdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">FlatDesign(click)</a></li><br>
+			<li style="list-style-image: url('images/designicon.png')"><a href="visualdesign.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">VisualDesign(click)</a></li><br>
+			<li style="list-style-image: url('images/rubyicon.png')"><a href="2017rubyconf.html" target="_blank" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;">Front end<br>fullscreen background<br>2017 Ruby Conf(click)</a></li><br>
+			<li style="list-style-image: url('images/clothesicon.png')"><a href="clothesWebUI.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">WebUI-SignIn(click)</a></li><br>
+			<li style="list-style-image: url('images/mapicon.png')"><a href="hualienapp/TEST.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">jQueryMobile-MapApp(click)</a></li><br>
 			<!--<li style="list-style-image: url('images/motionicon.png')"><a href="motion.html" style="font-family: 'Josefin Slab', serif;font-size: 30px;color:black;text-decoration:none;"target="_blank">MotionGraphic</a></li>
 			</ul>-->
 
