--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ a {
 <a href="work.html" style="font-family: 'Amatic SC', cursive;">Work</a>
 <a href="http://epochmy.blogspot.tw/" target="blank" style="font-family:'Amatic SC', cursive;">Blog</a>
 <a href="about.html" style="font-family: 'Amatic SC', cursive;">About</a>
-
+<a href="judyBday.html" style="font-family: 'Amatic SC', cursive;">judyCard</a>
 </p>
 <iframe src="bling/index.html"frameborder="0"scrolling="no" width="100%" height="700" ></iframe>
 
