--- a/visualdesign.html
+++ b/visualdesign.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>VisualDesign</title>
 	<link rel="stylesheet" href="work.css">
+	<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 400px)" href="tinyscreen.css" >
+	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 </head>
 <body>
 	<div id="Header">
