--- a/judyBday.html
+++ b/judyBday.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>JudyHappyBirthday</title>
   <link rel="stylesheet" href="judystyle.css">
-<meta property="og:title" content="呂玉潔生日快樂啊" />
+<meta property="og:title" content="欸正妹生日快樂啊" />
 <meta property="og:url" content="http://yupeiyu.github.io/yupeiyu/judyBday.html" />
 <meta property="og:image" content="images/judyBday.jpg" />
 <meta property="og:description" 
