--- a/judyBday.html
+++ b/judyBday.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>JudyHappyBirthday</title>
   <link rel="stylesheet" href="judystyle.css">
-<meta property="og:title" content="欸正妹生日快樂啊" />
+<meta property="og:title" content="欸正妹YuJeh生日快樂兒" />
 <meta property="og:url" content="http://yupeiyu.github.io/yupeiyu/judyBday.html" />
 <meta property="og:image" content="images/judyBday.jpg" />
 <meta property="og:description" 
-  content="XDDDDDDD" />
+  content="Bon anniversaire耶~ <br>Alles Gute zum Geburtstag耶~ Wszystkiego najlepszego這波蘭文啦XDDDDD <3 " />
     
   </head>
 
