--- a/judyBday.html
+++ b/judyBday.html
@@ -8,7 +8,7 @@
 <meta property="og:url" content="http://yupeiyu.github.io/yupeiyu/judyBday.html" />
 <meta property="og:image" content="images/judyBday.jpg" />
 <meta property="og:description" 
-  content="Bon anniversaire耶~ <br>Alles Gute zum Geburtstag耶~ Wszystkiego najlepszego這波蘭文啦XDDDDD <3 " />
+  content="Bon anniversaire耶~ <br>Alles Gute zum Geburtstag耶~<br> Wszystkiego najlepszego這波蘭文啦XDDDDD <3 " />
     
   </head>
 
